refactor with List .getLast()